cabal-version:   >= 1.10
name:            integer-gmp-extra
version:         0.0.0.1

license:         BSD3
license-file:    LICENSE
author:          Brian Huffman <huffman@galois.com>
maintainer:      Brian Huffman <huffman@galois.com>
bug-reports:     https://github.com/GaloisInc/integer-gmp-extra/issues
category:        empty
synopsis:        empty
description:     empty
build-type:      Simple
tested-with:     GHC==8.6.5

source-repository head
    type: git
    location: https://github.com/GaloisInc/integer-gmp-extra.git

library
    hs-source-dirs: src

    exposed-modules:
        GHC.Integer.GMP.Extra
        GHC.Integer.Extra
        GHC.Integer.MutBigNat
    default-language: Haskell2010
    build-depends:
        base >= 4 && < 4.14,
        ghc-prim,
        primitive,
        integer-gmp
    ghc-options:
        -Wall -fwarn-tabs
